added in friend finder

--- a/index.html
+++ b/index.html
@@ -65,13 +65,19 @@
       <div class="row">
         <div class="col-lg-10 mx-auto">
           <h2>About Me!</h2>
-          <p class="lead mb-5">Hello, My name is Ben Massey. I have been working at Amazon for three years now as a Problem
-            Solve P.A. In this position I am tasked to oversee the Problem solvers. The problem solvers are a group of Associates
-            that are held accountable to make sure all customer orders make it out of the building on time and in great condition.
-            I run inventory checks and relay system bugs to ensure that customers are getting exactly what they ordered.</p>
+          <p class="lead mb-5">Hello, My name is Ben Massey. I have been working at Amazon for three years now as a
+            Problem
+            Solve P.A. In this position I am tasked to oversee the Problem solvers. The problem solvers are a group of
+            Associates
+            that are held accountable to make sure all customer orders make it out of the building on time and in great
+            condition.
+            I run inventory checks and relay system bugs to ensure that customers are getting exactly what they
+            ordered.</p>
 
-          <p class="lead mb-5"> I am currently working on a Computer Science degree at UNT. I am also in a coding bootcamp
-            to become employer competitive for a job in web development. I have experience in html, css, bootstrap, javascript,
+          <p class="lead mb-5"> I am currently working on a Computer Science degree at UNT. I am also in a coding
+            bootcamp
+            to become employer competitive for a job in web development. I have experience in html, css, bootstrap,
+            javascript,
             jquery and I am currently learning node.</p>
 
           <a class="btn btn-dark btn-xl js-scroll-trigger" href="#portfolio">My Projects</a>
@@ -93,7 +99,8 @@
             <span class="caption">
               <span class="caption-content">
                 <h2>Destiny Themed Word Guess</h2>
-                <p class="mb-0">A word guess game using Javascript to update the page with the guessed letters and the amount
+                <p class="mb-0">A word guess game using Javascript to update the page with the guessed letters and the
+                  amount
                   of guesses left</p>
               </span>
             </span>
@@ -105,7 +112,8 @@
             <span class="caption">
               <span class="caption-content">
                 <h2>Trivia Game</h2>
-                <p class="mb-0">A trivia game that uses javascript and timer functions to dynamically update the page when
+                <p class="mb-0">A trivia game that uses javascript and timer functions to dynamically update the page
+                  when
                   the user clicks an answer or when the time runs out.</p>
               </span>
             </span>
@@ -117,8 +125,10 @@
             <span class="caption">
               <span class="caption-content">
                 <h2>Train Schedule</h2>
-                <p class="mb-0">An application that uses javascript and firebase to dynamically update the page with persistance
-                  for the new train when the user inputs it and using momentjs shows when the next train of this name will
+                <p class="mb-0">An application that uses javascript and firebase to dynamically update the page with
+                  persistance
+                  for the new train when the user inputs it and using momentjs shows when the next train of this name
+                  will
                   arrive at the train station</p>
               </span>
             </span>
@@ -126,11 +136,13 @@
           </a>
         </div>
         <div class="col-lg-6">
-          <a class="portfolio-item" href="#">
+          <a class="portfolio-item" href="https://pacific-sands-73523.herokuapp.com/">
             <span class="caption">
               <span class="caption-content">
-                <h2>Workspace</h2>
-                <p class="mb-0">A yellow workspace with some scissors, pencils, and other objects.</p>
+                <h2>friend finder</h2>
+                <p class="mb-0">An application that uses javascript nodeJS express and mysql to take in user input from
+                  a form and compare it to other users input to pair the current user with the user that best matches
+                  thier responses.</p>
               </span>
             </span>
             <img class="img-fluid" src="img/portfolio-4.jpg" alt="">
