added in friend finder

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                   of guesses left</p>
               </span>
             </span>
-            <img class="img-fluid" src="img/portfolio-1.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio-1.jpg" alt="word-guess-game">
           </a>
         </div>
         <div class="col-lg-6">
@@ -117,7 +117,7 @@
                   the user clicks an answer or when the time runs out.</p>
               </span>
             </span>
-            <img class="img-fluid" src="img/portfolio-2.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio-2.jpg" alt="triviagame">
           </a>
         </div>
         <div class="col-lg-6">
@@ -132,7 +132,7 @@
                   arrive at the train station</p>
               </span>
             </span>
-            <img class="img-fluid" src="img/portfolio-3.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio-3.jpg" alt="Train-schedule">
           </a>
         </div>
         <div class="col-lg-6">
@@ -145,7 +145,7 @@
                   thier responses.</p>
               </span>
             </span>
-            <img class="img-fluid" src="img/portfolio-4.jpg" alt="">
+            <img class="img-fluid" src="img/friend-finder.jpg" alt="friend-finder">
           </a>
         </div>
       </div>
