--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <a class="js-scroll-trigger" href="#about">About</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#portfolio">Portfolio</a>
+        <a class="js-scroll-trigger" href="#portfolio">Projects</a>
       </li>
       <li class="sidebar-nav-item">
         <a class="js-scroll-trigger" href="#contact">Contact</a>
@@ -157,8 +157,8 @@
     <div class="container">
       <ul class="list-inline mb-5">
         <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white mr-3" href="#">
-            <i class="fa fa-linkin"></i>
+          <a class="social-link rounded-circle text-white mr-3" href="https://www.linkedin.com/in/benjamin-massey-348490168/">
+            <i class="fab fa-linkedin"></i>
           </a>
         </li>
         <li class="list-inline-item">
