added a page scroll link for the contact links at the end

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <nav id="sidebar-wrapper">
     <ul class="sidebar-nav">
       <li class="sidebar-brand">
-        <a class="js-scroll-trigger" href="#page-top">Benjamin Massey</a>
+        <a class="js-scroll-trigger">Benjamin Massey</a>
       </li>
       <li class="sidebar-nav-item">
         <a class="js-scroll-trigger" href="#page-top">Home</a>
@@ -153,7 +153,7 @@
   </section>
 
   <!-- Footer -->
-  <footer class="footer text-center">
+  <footer class="footer text-center" id="contact">
     <div class="container">
       <ul class="list-inline mb-5">
         <li class="list-inline-item">
