--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <!-- Header -->
   <header class="masthead d-flex">
     <div class="container text-center my-auto">
-      <h1 class="mb-1">Benjmain Massey</h1>
+      <h1 class="mb-1">Benjamin Massey</h1>
       <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">About Me</a>
     </div>
     <div class="overlay"></div>
@@ -65,20 +65,10 @@
       <div class="row">
         <div class="col-lg-10 mx-auto">
           <h2>About Me!</h2>
-          <p class="lead mb-5">Hello, My name is Ben Massey. I have been working at Amazon for three years now as a
-            Problem
-            Solve P.A. In this position I am tasked to oversee the Problem solvers. The problem solvers are a group of
-            Associates
-            that are held accountable to make sure all customer orders make it out of the building on time and in great
-            condition.
-            I run inventory checks and relay system bugs to ensure that customers are getting exactly what they
-            ordered.</p>
-
-          <p class="lead mb-5"> I am currently working on a Computer Science degree at UNT. I am also in a coding
-            bootcamp
-            to become employer competitive for a job in web development. I have experience in html, css, bootstrap,
-            javascript,
-            jquery and I am currently learning node.</p>
+          <p class="lead mb-5">Customer-focused Web Developer, with a certificate from S.M.U's coding boot-camp, that
+            specializes in object-oriented programming. Experienced in Project Management using data researching and
+            analytical thinking paired with time management and team leadership to bring my team to the next level.
+            Highly skilled in regards to problem-solving and working under pressure.</p>
 
           <a class="btn btn-dark btn-xl js-scroll-trigger" href="#portfolio">My Projects</a>
         </div>
@@ -139,13 +129,37 @@
           <a class="portfolio-item" href="https://pacific-sands-73523.herokuapp.com/">
             <span class="caption">
               <span class="caption-content">
-                <h2>friend finder</h2>
+                <h2>Friend Finder</h2>
                 <p class="mb-0">An application that uses javascript nodeJS express and mysql to take in user input from
                   a form and compare it to other users input to pair the current user with the user that best matches
                   thier responses.</p>
               </span>
             </span>
             <img class="img-fluid" src="img/friend-finder.jpg" alt="friend-finder">
+          </a>
+        </div>
+        <div class="col-lg-6">
+          <a class="portfolio-item" href="https://ben-massey.github.io/crystal-game.io/">
+            <span class="caption">
+              <span class="caption-content">
+                <h2>Crystal Collector</h2>
+                <p class="mb-0">An application that will randomly generate an goal number and four hidden numbers to
+                  click on to reach the goal number.</p>
+              </span>
+            </span>
+            <img class="img-fluid" src="img/crystal-game.PNG" alt="friend-finder">
+          </a>
+        </div>
+        <div class="col-lg-6">
+          <a class="portfolio-item" href="http://noj39.herokuapp.com">
+            <span class="caption">
+              <span class="caption-content">
+                <h2>NOJ</h2>
+                <p class="mb-0">A sound keyboard that has several different presests that allow the user to choose
+                  between a range of different uses.</p>
+              </span>
+            </span>
+            <img class="img-fluid" src="img/NOJ.PNG" alt="NOJ">
           </a>
         </div>
       </div>
