--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="container text-center">
       <div class="row">
         <div class="col-lg-10 mx-auto">
-          <h2>About Me!</h2>
+          <h2>About Me</h2>
           <p class="lead mb-5">Customer-focused Web Developer, with a certificate from S.M.U's coding boot-camp, that
             specializes in object-oriented programming. Experienced in Project Management using data researching and
             analytical thinking paired with time management and team leadership to bring my team to the next level.
